--- a/app/src/main/res/layout/activity_org_home.xml
+++ b/app/src/main/res/layout/activity_org_home.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Organizer.ui.Home"
+        tools:context=".Organizer.ui.Dashboard"
     android:background="@drawable/gradient_background"
     android:orientation="vertical">
 
