--- a/app/src/main/res/layout/activity_org_roomcreate.xml
+++ b/app/src/main/res/layout/activity_org_roomcreate.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Organizer.ui.Home"
+        tools:context=".Organizer.ui.Dashboard"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -42,6 +42,7 @@ android:background="@color/blue"
             android:textSize="16sp"
             android:padding="10dp"
             android:gravity="center"
+
             android:textColor="@color/white"
             android:background="@drawable/white_unfilled_rounded"
             android:textFontWeight="800"
@@ -49,7 +50,7 @@ android:background="@color/blue"
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="60dp"
             android:layout_marginBottom="10dp"
 android:background="@drawable/white_unfilled_rounded"
             android:padding="10dp"
