--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,11 +8,17 @@
     <color name="black">#FF000000</color>
     <color name="gray">#FF808080</color>
     <color name="bright_gray">#FFebecf0</color>
-    <color name="blue">#18ACFE</color>
+    <color name="blue">#FF18ACFE</color>
+    <color name="lightblue">#3318ACFE</color>
+
+
     <color name="white">#FFFFFFFF</color>
     <color name="button_blue">#FF35B6FE</color>
     <color name="button_yellow">#FFFFDE59</color>
     <color name="card_pink">#33E36B6B</color>
     <color name="transparent_blue">#5518ACFE</color>
+    <color name="pale_green">#FFAACE54</color>
+    <color name="off_white">#FFFDFDFD</color>
+    <color name="orange">#FFFDA633</color>
 
 </resources>
