--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -4,9 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="code"
             type="String" />
+        <variable
+            name="teamOne"
+            type="String" />
+        <variable
+            name="teamTwo"
+            type="String"/>
     </data>
 
     <LinearLayout
@@ -26,7 +33,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@drawable/logo"/>
+                android:src="@drawable/logo" />
         </LinearLayout>
 
         <LinearLayout
@@ -82,10 +89,10 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/white_unfilled_rectangle"
                         android:gravity="center"
-                        android:padding="12dp"
-
-                        android:text="@{code}"
                         android:hint="code"
+
+                        android:padding="12dp"
+                        android:text="@{code}"
                         android:textColor="@color/white"
                         android:textSize="20sp" />
                 </LinearLayout>
@@ -95,19 +102,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/white_unfilled_rounded"
-                    android:orientation="horizontal"
                     android:gravity="center"
+                    android:orientation="horizontal"
                     android:padding="5dp">
 
                     <TextView
                         android:id="@+id/refreshCode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:background="@color/blue"
                         android:gravity="center"
                         android:padding="10dp"
-                        android:layout_marginRight="5dp"
                         android:text="Refresh code"
-                        android:background="@color/blue"
                         android:textColor="@color/white"
                         android:textFontWeight="800"
                         android:textSize="16sp" />
@@ -148,7 +155,6 @@
                 />
 
             <TextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -158,7 +164,7 @@
                 android:paddingTop="10dp"
                 android:paddingRight="40dp"
                 android:paddingBottom="10dp"
-                android:text="Team 1"
+                android:text="@{teamOne}"
                 android:textColor="@color/white"
                 android:textSize="15sp" />
 
@@ -184,7 +190,7 @@
                 android:paddingRight="40dp"
                 android:paddingBottom="10dp"
 
-                android:text="Team 2"
+                android:text="@{teamTwo}"
                 android:textColor="@color/white"
                 android:textSize="15sp" />
 
